[TASK] Model and seed cleanup. Factory cleanup.

--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -18,7 +18,7 @@
     <% @ratings.each do |rating| %>
       <tr>
         <td><%= rating.user_id %></td>
-        <td><%= rating.landlord_id %></td>
+        <td><%= rating.landlord %></td>
         <td><%= rating.overall %></td>
         <td><%= rating.repairs %></td>
         <td><%= rating.review %></td>
