--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: rating, local: true, class: 'ui form') do |form| %>
+<%= form_with(model: [@tenancy, rating], local: true, class: 'ui form') do |form| %>
   <% if rating.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(rating.errors.count, "error") %> prohibited this rating from being saved:</h2>
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :landlord_id, "Landlord" %>
-    <%= form.collection_select :landlord_id, @landlords, :id, :name, prompt: true %>
+    Landlord: <%= @tenancy.landlord.name %>
+    Unit: <%= @tenancy.unit %>
   </div>
 
   <div class="field">
