--- a/app/views/landlords/show.html.erb
+++ b/app/views/landlords/show.html.erb
@@ -9,6 +9,6 @@
 <% end %>
 </ul>
 
-<%= render partial: "ratings/review_table", object: @landlord.ratings %>
+<%= render partial: "ratings/review_table", object: @landlord.tenancies %>
 
 <%= link_to 'Back', landlords_path %>
