--- a/app/views/tenancies/show.html.erb
+++ b/app/views/tenancies/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Review for <%= @rating.unit.address %></h1>
-<p><em><%= @rating.tenancy.start_date.strftime('%Y') %><%= @rating.tenancy.end_date&.strftime(' - %Y') %></em></p>
+<p><em><%= @rating.start_date.strftime('%Y') %><%= @rating.end_date&.strftime(' - %Y') %></em></p>
 
 <p>
   <strong>Landlord:</strong>
