--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 </ul>
 
-<%= render partial: "ratings/review_table", object: @unit.tenancies %>
+<%= render partial: "tenancies/review_table", object: @unit.tenancies %>
 
 
 <%= link_to 'Back', units_path %>
