--- a/app/views/union/landlords/_form.html.erb
+++ b/app/views/union/landlords/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: landlord, local: true) do |form| %>
+<%= form_with(model: [:union, landlord], local: true) do |form| %>
   <% if landlord.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(landlord.errors.count, "error") %> prohibited this landlord from being saved:</h2>
