--- a/app/views/union/landlords/index.html.erb
+++ b/app/views/union/landlords/index.html.erb
@@ -6,17 +6,16 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @landlords.each do |landlord| %>
       <tr>
-        <td><%= landlord.name %></td>
-        <td><%= link_to 'Show', landlord %></td>
-        <td><%= link_to 'Edit', edit_landlord_path(landlord) %></td>
-        <td><%= link_to 'Destroy', landlord, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to landlord.name, [:union, landlord] %></td>
+        <td><%= link_to 'Edit', edit_union_landlord_path(landlord) if can? :edit, landlord %></td>
+        <td><%= link_to 'Destroy', [:union,landlord], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, landlord %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Landlord', new_landlord_path %>
+<%= link_to 'New Landlord', new_union_landlord_path if can? :create, Landlord %>
