--- a/app/views/union/landlords/show.html.erb
+++ b/app/views/union/landlords/show.html.erb
@@ -5,11 +5,9 @@
 <h2>Known Units</h2>
 <ul>
 <% @units.each do |unit| %>
-  <li><%= unit.address %> (<%= link_to 'View', unit %> | Average Rating: <%= rating_icon(clamp_rating(landlord.ratings.overall_average)) %> )</li>
+  <li><%= link_to unit.address, [:union, unit] %> (Average Rating: <%= rating_icon(clamp_rating(@landlord.ratings.overall_average)) %> )</li>
 <% end %>
 </ul>
 
-<% if current_user.present? %>
-<%= link_to 'Edit', edit_tenancy_landlord_path(@tenancy, @landlord) %> |
-<% end %>
-<%= link_to 'Back', landlords_path %>
+<%= link_to 'Edit', edit_union_landlord_path(@landlord) if can? :edit, @landlord %> |
+<%= link_to 'Back', union_landlords_path %>
