--- a/app/views/union/tenancies/index.html.erb
+++ b/app/views/union/tenancies/index.html.erb
@@ -1,7 +1,38 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Places I've Lived</h1>
+<h1>Tenancies</h1>
 
+<h2>Places I've lived</h2>
+<%= link_to 'New Tenancy', new_union_tenancy_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Landlord</th>
+      <th>Unit</th>
+      <th>Rent</th>
+      <th>Date</th>
+      <th>Rating</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @my_tenancies.each do |tenancy| %>
+      <tr>
+        <td><%= link_to tenancy.landlord.name, [:union, tenancy.landlord] %></td>
+        <td><%= link_to tenancy.unit.address, [:union, tenancy.unit] %></td>
+        <td><%= tenancy.rent %></td>
+        <td><%= tenancy.start_date.strftime('%Y') %><%= tenancy.end_date&.strftime(' - %Y') %></td>
+        <td><%= render partial: "tenancy_rating", object: tenancy %></td>
+        <td><%= link_to 'Show', [:union, tenancy] %></td>
+        <td><%= edit_link(edit_union_tenancy_path(tenancy)) if can?(:edit, tenancy) %></td>
+        <td><%= destroy_link(tenancy) if can?(:destroy, tenancy) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h2>Other People</h2>
 <table>
   <thead>
     <tr>
@@ -16,7 +47,7 @@
   </thead>
 
   <tbody>
-    <% @tenancies.each do |tenancy| %>
+    <% @other_tenancies.each do |tenancy| %>
       <tr>
         <td><%= tenancy.tenant %></td>
         <td><%= link_to tenancy.landlord.name, [:union, tenancy.landlord] %></td>
@@ -32,6 +63,3 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Tenancy', new_union_tenancy_path %>
