Fixes all existing specs.

--- a/app/assets/stylesheets/ratings.scss
+++ b/app/assets/stylesheets/ratings.scss
@@ -3,12 +3,15 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .fa-frown {
+  font-size: 1.4rem;
   color: red;
 }
 .fa-meh {
+  font-size: 1.4rem;
   color: orange;
 }
 .fa-smile {
+  font-size: 1.4rem;
   color: green;
 }
 
