--- a/app/views/tenancies/show.html.erb
+++ b/app/views/tenancies/show.html.erb
@@ -20,7 +20,7 @@
 
 <p>
   <strong>Review:</strong>
-  <%= @rating.review %>
+  <%= @rating.public_review %>
 </p>
 
 <%= link_to 'Back', ratings_path %>
