--- a/app/views/union/tenancies/show.html.erb
+++ b/app/views/union/tenancies/show.html.erb
@@ -25,9 +25,14 @@
   </dd>
   <% end %>
 
-<dt>Review</dt>
+<dt>Public Review</dt>
 <dd>
-  <%= @tenancy.review %>
+  <%= @tenancy.public_review %>
+</dd>
+
+<dt>Private Review</dt>
+<dd>
+  <%= @tenancy.private_review %>
 </dd>
 </dl>
 
