--- a/app/views/tenancies/_review_table.html.erb
+++ b/app/views/tenancies/_review_table.html.erb
@@ -13,7 +13,7 @@
       <td><%= tenancy.start_date.strftime('%Y') %><%= tenancy.end_date&.strftime(' - %Y') %></td>
       <td><%= rating_icon(tenancy.overall) %></td>
       <td><%= rating_icon(tenancy.repairs) %></td>
-      <td><%= tenancy.review[0..300] %> (<%= link_to 'Read Full', rating_path(tenancy) %>)</td>
+      <td><%= tenancy.public_review[0..300] %> (<%= link_to 'Read Full', rating_path(tenancy) %>)</td>
     </tr>
   <% end %>
   </tbody>
