--- a/app/views/union/tenancies/_form.html.erb
+++ b/app/views/union/tenancies/_form.html.erb
@@ -39,14 +39,14 @@
   <div class="field">
     <%= form.label :overall, "Overall Rating", for: 'overall' %>
     <div class="rating">
-      <%= form.collection_radio_buttons :overall, [['-1', icon('fas', "frown", 'Poor')] ,['0', icon('fas', "meh", 'OK',)], ['1', icon('fas', "smile", "Good")]], :first, :last %>
+      <%= form.collection_radio_buttons :overall, [['0', icon('fas', "angry", 'Awful')] ,['1', icon('fas', "frown", 'Poor')], ['2', icon('fas', 'meh', 'OK')], ['3', icon('fas', "smile", "Good")]], :first, :last %>
     </div>
   </div>
 
   <div class="field">
     <%= form.label :repairs, "Repairs (if applicable)", for: 'repairs' %>
     <div class="rating">
-      <%= form.collection_radio_buttons :repairs, [['-1', icon('fas', "frown", 'Poor')] ,['0', icon('fas', "meh", 'OK',)], ['1', icon('fas', "smile", "Good")], ['', icon('fas', 'comment-slash', 'N/A')]], :first, :last %>
+      <%= form.collection_radio_buttons :repairs, [['0', icon('fas', "angry", 'Awful')] ,['1', icon('fas', "frown", 'Poor')], ['2', icon('fas', 'meh', 'OK')], ['3', icon('fas', "smile", "Good")], ['', icon('fas', 'comment-slash', 'N/A')]], :first, :last %>
     </div>
   </div>
 
