Rent is now split into two fields. Adds a helper method for displaying the rent.

--- a/app/views/union/tenancies/_form.html.erb
+++ b/app/views/union/tenancies/_form.html.erb
@@ -17,8 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :rent %>
-    <%= form.text_field :rent %>
+    <%= form.label :rent_total, "The total monthly rent" %>
+    <%= form.text_field :rent_total %>
+  </div>
+
+  <div class="field">
+    <%= form.label :rent_portion, "The portion of rent you pay" %>
+    <%= form.text_field :rent_portion %>
   </div>
 
   <div class="field">
