--- a/app/views/layouts/basic.html.erb
+++ b/app/views/layouts/basic.html.erb
@@ -68,6 +68,9 @@
         <div class="menu">
           <% if current_user %>
             <div class="header">Signed in as <%= current_user.email %></div>
+            <%= link_to('Profile', profile_path, class: 'item') %>
+            <%= link_to('Account',
+              edit_user_registration_path, class: 'item') %>
             <%= link_to('Sign out',  destroy_user_session_path, :method => 'delete', class: 'item') %>
           <% else %>
             <%= link_to "Sign in", new_user_session_path, class: 'item' %>
